# pyidp

./: .gitignore
.devcontainer/: Dockerfile  compose.yml  devcontainer.json  initialize.sh
.devcontainer/traefik/certs/: traefik.cnf
.devcontainer/traefik/dynamic/: config.yaml
.github/workflows/: build-and-push.yaml
docker/: pyidp.Dockerfile
docker/pyidp/: test.sh
docker/pyidp/srv/www/: entrypoint.sh  gunicorn.conf.py
scripts/: create-authn-request  shared  sync-venv  test
src/: pyproject.toml
src/pyidp/: app.py  config.py  config_local.py  extensions.py  logging.py  state.py  views.py
src/pyidp/attributemaps/: saml_uri.py
src/pyidp/static/: local.css  rit.css
src/pyidp/templates/: authenticate.html  base.html  login.html
src/pyidp/tests/: config.py  conftest.py  pytest.ini  sp_conf.py  test_authn_request.py  test_authn_response.py  test_profile_chooser.py
src/pyidp/tests/attributemaps/: saml_uri.py
src/pyidp/tests/keys/: reusable.crt  reusable.key
src/pyidp/tests/metadata/: dummy-idp.localhost.xml  dummy-sp.localhost.xml  dummy-sp2.localhost.xml
