[project]
name = "pyidp"
version = "0.0.1"
description = "Web site and reference implementation for the acmev2 package"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "flask-session>=0.8.0",
    "pysaml2>=7.5.2",
    "pyyaml>=6.0.2",
]

[tool.uv]
dev-dependencies = [
    "beautifulsoup4>=4.13.4",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-flask>=1.3.0",
]


[tool.setuptools.packages.find]
where = ["."]
#exclude = []

[tool.setuptools.package-data]
"pyidp" = ["**/*"]
